# requests-safe

./: .coveragerc  .flake8  .gitignore  .isort.cfg  CHANGELOG.rst  Dockerfile.jenkins  Jenkinsfile  LICENSE  MANIFEST.in  README.rst  setup.cfg  tox.ini
src/requests_safe/: __init__.py
tests/: conftest.py  test_it.py
