[metadata]
name = requests-safe
version = 0.0.0b0
description = Provides an adapter for requests that won't allow connections to "unsafe" networks.
long_description = file: README.rst, CHANGELOG.rst, LICENSE
long_description_content_type = text/x-rst
keywords = requests, urllib3
license = ISC License
classifiers =
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
url = https://github.com/crunch-io/requests-safe
author = Bert JW Regeer
author_email = bertjw@regeer.org

[options]
package_dir=
    =src
packages=find:
install_requires = 
    requests
    urllib3
    ipaddress; python_version == "2.7"

[options.packages.find]
where=src

[options.extras_require]
testing = 
    pytest
    pytest-cov
    coverage
    mocket

[bdist_wheel]
universal=1

[tool:pytest]
python_files = test_*.py
testpaths =
    tests
addopts = -W always --cov --cov-report=term-missing
